2020-07-15 Sergey Belyashov <sergey.belyashov@gmail.com>
	* device/lib/z80/__uitobcd.s,
	  device/lib/z80/__ultobcd.s,
	  support/regression/tests/uitobcd.c,
	  support/regression/tests/ultobcd.c:
	  Add functions ___uitobcd() and ___ultobcd()
	* device/lib/z80/__strreverse.s:
	  Add function ___strreverse() to reverse order of string
	* device/lib/z80/__itoa.s,
	  device/lib/z80/__ltoa.s,
	  device/lib/z80/Makefile.in:
	  Fix Bug #3077 for Z80/Z80-resiy ports.

2020-07-14 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/z80/Makefile.in,
	  device/lib/z80/memcpy.s:
	  Implement RFE #664 for Z80 port.

2020-07-14 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/Makefile.in:
	  Add lib file removing before creating new one to prevent merging
	  Add device/lib/Makefile refreshing after changing Makefile.in

2020-07-14 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/regression/tests/itoa.c,
	  support/regression/tests/ltoa.c:
	  Split itoa/ltoa tests on 5 parts. Possible workaround for Bug #3082.
	  Add tests for uncommon radix.

2020-07-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3081.c:
	  Fix bug #3081.

2020-07-10 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/_memmove.c:
	  Small optimization of generic memmove() implementation

2020-07-08 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/regression/tests/itoa.c:
	  Add tests for _uitoa() and _itoa()
	* support/regression/tests/ltoa.c:
	  Add tests for _ultoa() and _ltoa()

2020-07-06 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c,
	  src/ds390/main.c,
	  src/mcs51/main.c,
	  src/pdk/main.c,
	  src/stm8/main.c,
	  src/port.h,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peep.h,
	  src/z80/peeph-z80.def:
	  Implement RFE #683: Add canSplitReg peephole constraint

2020-07-06 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/memory.c: